[project]
name = "mod6-ux-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.10.1",
    "absl-py==2.3.1",
    "cffi==2.0.0",
    "flatbuffers==25.12.19",
    "mediapipe==0.10.31",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pycparser==2.23",
    "pyside6==6.10.1",
    "pyside6-addons==6.10.1",
    "pyside6-essentials==6.10.1",
    "shiboken6==6.10.1",
    "sounddevice==0.5.3",
]
